@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-16T16:24:12Z",
-  "count_outdated" : 195,
-  "uniques_outdated" : 137,
+  "timestamp" : "2023-07-17T02:02:08Z",
+  "count_outdated" : 199,
+  "uniques_outdated" : 139,
   "count" : 203,
   "uniques" : 143,
   "clones" : [
-    {
-      "timestamp": "2023-07-02T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-07-03T00:00:00Z",
       "count": 1,
